--- a/index.html
+++ b/index.html
@@ -4,69 +4,59 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>RENAISSANCE – Coming Soon</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
+      background: linear-gradient(135deg, #c0c0c0, #f0f0f0);
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #c0c0c0, #f0f0f0); /* 은색 느낌 */
-      color: #222;
       height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-    .header {
-      display: flex;
-      align-items: center;
-      padding: 1.5em 2em;
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-    .header img {
-      height: 36px;
-      margin-right: 12px;
-    }
-    .header span {
-      font-family: 'Playfair Display', serif;
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-    .main {
-      flex: 1;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
+      color: #111;
     }
+
     h1 {
       font-family: 'Playfair Display', serif;
-      font-size: 3rem;
-      margin: 0.5em 0;
+      font-size: 4rem;
+      font-weight: 700;
+      margin: 0.5em 0 0.2em 0;
     }
-    p {
-      font-size: 1.2rem;
-      max-width: 600px;
-      margin: 1em auto;
+
+    h2 {
+      font-size: 1.5rem;
+      font-weight: 400;
+      font-style: italic;
+      color: #666666;
+      margin-bottom: 2em;
+      letter-spacing: 1px;
     }
+
+
+    h3 {
+      font-size: 2rem;
+      font-weight: 600;
+      margin-top: 0;
+    }
+
     .fade-in {
       animation: fadeIn 1.5s ease-in;
     }
+
     @keyframes fadeIn {
-      from { opacity: 0 }
-      to { opacity: 1 }
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-  <div class="header">
-    <img src="logo.png" alt="RENAISSANCE Logo" />
-    <span>RENAISSANCE</span>
+  <div class="fade-in">
+    <h1>RENAISSANCE</h1>
+    <h2>"Our Fashion to Art"</h2>
+    <h3>Coming Soon</h3>
   </div>
-  <main class="main fade-in">
-    <h1>Coming Soon</h1>
-    <p>"Our Fashion to Art"</p>
-  </main>
 </body>
 </html>
