--- a/welcome.html
+++ b/welcome.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Renaissance - Coming Soon</title>
   <!-- CSS 파일 -->
-  <link rel="stylesheet" href="static/css/welcome.css" />
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
   <div class="container">
