--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
+<!-- AllD Coming Soon Page (Visual Match to Uploaded Image) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Renaissance - Coming Soon</title>
-  <!-- CSS 파일 -->
-  <link rel="stylesheet" href="index.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AllD - Coming Soon</title>
+  <link rel="stylesheet" href="welcome.css">
 </head>
 <body>
   <div class="container">
-    <h1 class="title">RENAISSANCE</h1>
-    <p class="subtitle">“Our Fashion to Art”</p>
-    <h2 class="coming-soon">Coming Soon</h2>
+    <div class="left-content">
+      <p class="tagline">Design-Centric Cultural Platform</p>
+      <h1 class="coming-soon">Coming Soon</h1>
+    </div>
+    <div class="right-logo">
+      <img src="logo.png" alt="AllD Logo" class="alld-logo">
+    </div>
   </div>
+
+  <footer class="footer">
+    <div class="footer-line"></div>
+    <div class="footer-info">
+      <p>COMPANY NAME : AllD Inc. &nbsp;&nbsp; BUSINESS REGISTRATION NUMBER : 224-86-03679</p>
+      <p>CEO : JEEHYUN BANG &nbsp;&nbsp; EMAIL : johnbang@fashiontoart.com</p>
+      <p>OFFICE : #207, 41, Ogeum-ro 46-gil, Songpa-gu, Seoul, Republic of Korea</p>
+    </div>
+  </footer>
+
+  <script src="static/js/welcome.js"></script>
 </body>
 </html>
